feat(cli): align shell panel with camel